objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Project Volunteers</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Approved for assessment</fullName>
        </values>
        <values>
            <fullName>Approved for offer</fullName>
        </values>
        <values>
            <fullName>Assessed rejected</fullName>
        </values>
        <values>
            <fullName>Assessment scheduled</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New rejected</fullName>
        </values>
        <values>
            <fullName>Offered</fullName>
        </values>
        <values>
            <fullName>Trained</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Staffing</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Approved for PS</fullName>
        </values>
        <values>
            <fullName>Approved for assessment</fullName>
        </values>
        <values>
            <fullName>Approved for offer</fullName>
        </values>
        <values>
            <fullName>Assessed rejected</fullName>
        </values>
        <values>
            <fullName>Assessment scheduled</fullName>
        </values>
        <values>
            <fullName>Awaiting candidate role reply</fullName>
        </values>
        <values>
            <fullName>CV received</fullName>
        </values>
        <values>
            <fullName>Candidate role change</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Hold</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New rejected</fullName>
        </values>
        <values>
            <fullName>Offered</fullName>
        </values>
        <values>
            <fullName>PS rejected</fullName>
        </values>
        <values>
            <fullName>PS scheduled</fullName>
        </values>
        <values>
            <fullName>Routed</fullName>
        </values>
        <values>
            <fullName>Routed rejected</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Young people</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved for offer</fullName>
        </values>
        <values>
            <fullName>Approved for offer but awaiting payment</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Ineligible</fullName>
        </values>
        <values>
            <fullName>Insufficient P1 information</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Offered</fullName>
        </values>
        <values>
            <fullName>P1 and payment received</fullName>
        </values>
        <values>
            <fullName>P1 received</fullName>
        </values>
        <values>
            <fullName>P2 and payment received</fullName>
        </values>
        <values>
            <fullName>P2 received%2C awaiting payment</fullName>
        </values>
        <values>
            <fullName>P2 sent</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ADHD_or_hyperactivity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ADHD or hyperactivity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Wave_choice__c</fullName>
        <label>AM Wave choice</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wave 1) 11th - 14th July</fullName>
                </value>
                <value>
                    <fullName>Wave 2) 18th - 21st July</fullName>
                </value>
                <value>
                    <fullName>Wave 3) 25th - 28th July</fullName>
                </value>
                <value>
                    <fullName>Wave 4) 1st - 4th Aug</fullName>
                </value>
                <value>
                    <fullName>Wave 5) 8th - 11th Aug</fullName>
                </value>
                <value>
                    <fullName>Wave 6) 15th - 18th Aug</fullName>
                </value>
                <value>
                    <fullName>Wave 7) 22nd - 25th Aug</fullName>
                </value>
                <value>
                    <fullName>Wave 8) 29th Aug - 1st Sept</fullName>
                </value>
                <value>
                    <fullName>Wave 9) 1st Sept - 4th Sept</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AM_application_date__c</fullName>
        <label>AM application date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_location__c</fullName>
        <label>AM location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>North London</fullName>
                </value>
                <value>
                    <fullName>South London</fullName>
                </value>
                <value>
                    <fullName>West London</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AM_team_confirmed__c</fullName>
        <label>AM team confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Edwards - Media</fullName>
                </value>
                <value>
                    <fullName>Perham - Sport</fullName>
                </value>
                <value>
                    <fullName>Radcliffe - Enterprise</fullName>
                </value>
                <value>
                    <fullName>Reiss - Drama</fullName>
                </value>
                <value>
                    <fullName>Sabesan - Photography</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AM_wave_confirmed__c</fullName>
        <label>AM wave confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Birmingham Wave 1: 11th - 14th July</fullName>
                </value>
                <value>
                    <fullName>Birmingham Wave 2: 18th - 21st July</fullName>
                </value>
                <value>
                    <fullName>Birmingham Wave 3: 25 - 28 July</fullName>
                </value>
                <value>
                    <fullName>Birmingham Wave 4: 1 - 4 August</fullName>
                </value>
                <value>
                    <fullName>Birmingham Wave 5: 8 - 11 August</fullName>
                </value>
                <value>
                    <fullName>Birmingham Wave 6: 15 - 18 August</fullName>
                </value>
                <value>
                    <fullName>Birmingham Wave 7: 22 - 25 August</fullName>
                </value>
                <value>
                    <fullName>Birmingham Wave 8: 29 August - 1 September</fullName>
                </value>
                <value>
                    <fullName>Birmingham Wave 9: 1 - 4 September</fullName>
                </value>
                <value>
                    <fullName>North Ldn W1</fullName>
                </value>
                <value>
                    <fullName>North Ldn W2</fullName>
                </value>
                <value>
                    <fullName>North London Wave 3: 25 - 28 July</fullName>
                </value>
                <value>
                    <fullName>North London Wave 4: 1 - 4 August</fullName>
                </value>
                <value>
                    <fullName>North Ldn W5</fullName>
                </value>
                <value>
                    <fullName>North Ldn W6</fullName>
                </value>
                <value>
                    <fullName>North Ldn W7</fullName>
                </value>
                <value>
                    <fullName>North Ldn W8</fullName>
                </value>
                <value>
                    <fullName>North Ldn W9</fullName>
                </value>
                <value>
                    <fullName>South London Wave 1: 11 - 14 July</fullName>
                </value>
                <value>
                    <fullName>South London Wave 2: 18 - 21 July</fullName>
                </value>
                <value>
                    <fullName>South London Wave 3: 25 - 28 July</fullName>
                </value>
                <value>
                    <fullName>South London Wave 4: 1 - 4 August</fullName>
                </value>
                <value>
                    <fullName>South London Wave 5: 8 - 11 August</fullName>
                </value>
                <value>
                    <fullName>South London Wave 6: 15 - 18 August</fullName>
                </value>
                <value>
                    <fullName>South London Wave 7: 22 - 25 August</fullName>
                </value>
                <value>
                    <fullName>South London Wave 8:  29 August - 1 September</fullName>
                </value>
                <value>
                    <fullName>South London Wave 9: 1 - 4 September</fullName>
                </value>
                <value>
                    <fullName>West London Wave 1: 11 - 14 July</fullName>
                </value>
                <value>
                    <fullName>West London Wave 2: 18 - 21 July</fullName>
                </value>
                <value>
                    <fullName>West London Wave 3: 25 - 28 July</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_criminal_record__c</fullName>
        <label>A criminal record?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_history_of_epilepsy_fainting_attacks__c</fullName>
        <label>A history of epilepsy/fainting attacks?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes - fainting attacks</fullName>
                </value>
                <value>
                    <fullName>Yes - epilepsy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_history_of_substance_alcohol_abuse__c</fullName>
        <label>A history of substance/alcohol abuse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes - alcohol abuse</fullName>
                </value>
                <value>
                    <fullName>Yes - substance abuse</fullName>
                </value>
                <value>
                    <fullName>Yes - alcohol and substance abuse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Able_to_attend_9_Sept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Able to attend 9 Sept PV training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Absence_request__c</fullName>
        <description>Absence from Challenge programme</description>
        <inlineHelpText>Details of absence request, and whether it has been agreed</inlineHelpText>
        <label>Absence request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_line_1__c</fullName>
        <label>Address line 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_line_2__c</fullName>
        <label>Address line 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_line_3__c</fullName>
        <label>Address line 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allergic_to_any_foods__c</fullName>
        <label>Allergic to any foods</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes, allergic to dairy</fullName>
                </value>
                <value>
                    <fullName>Yes, allergic to nuts</fullName>
                </value>
                <value>
                    <fullName>Yes, allergic to fish/shellfish</fullName>
                </value>
                <value>
                    <fullName>Yes, allergic to other foods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allocation_has_been_made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allocation has been made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_received__c</fullName>
        <label>Amount received</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ant_Email_send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ant Email send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anti_social_reckless_violent_impulsive__c</fullName>
        <label>Anti-social/reckless/violent/impulsive?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_blood_disorders__c</fullName>
        <label>Any blood disorders?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_other_allergic_reactions__c</fullName>
        <label>Any other allergic reactions?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes - hayfever</fullName>
                </value>
                <value>
                    <fullName>Yes - other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_special_dietary_requirements__c</fullName>
        <label>Any special dietary requirements?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes - vegetarian</fullName>
                </value>
                <value>
                    <fullName>Yes - vegan</fullName>
                </value>
                <value>
                    <fullName>Yes - halal</fullName>
                </value>
                <value>
                    <fullName>Yes - kosher</fullName>
                </value>
                <value>
                    <fullName>Yes - other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Location__c</fullName>
        <label>Applicant Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Bolton</fullName>
                </value>
                <value>
                    <fullName>Midlands</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_date__c</fullName>
        <label>Application date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_decision__c</fullName>
        <inlineHelpText>Decision after application submission</inlineHelpText>
        <label>Application decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offer approved by CRM</fullName>
                </value>
                <value>
                    <fullName>Conditional offer approved</fullName>
                </value>
                <value>
                    <fullName>Offer approved by Programmes</fullName>
                </value>
                <value>
                    <fullName>Advance</fullName>
                </value>
                <value>
                    <fullName>Other role</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_date__c</fullName>
        <label>Assessment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_date_attended__c</fullName>
        <label>Assessment date attended</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>27th July 2011</fullName>
                </value>
                <value>
                    <fullName>28th July 2011</fullName>
                </value>
                <value>
                    <fullName>1st August 2011</fullName>
                </value>
                <value>
                    <fullName>9th August 2011</fullName>
                </value>
                <value>
                    <fullName>10th August 2011</fullName>
                </value>
                <value>
                    <fullName>16th August 2011</fullName>
                </value>
                <value>
                    <fullName>17th August 2011</fullName>
                </value>
                <value>
                    <fullName>22nd August 2011</fullName>
                </value>
                <value>
                    <fullName>23rd August 2011</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_decision__c</fullName>
        <inlineHelpText>Decision after assessment (either interview or selection weekend)</inlineHelpText>
        <label>Assessment decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance</fullName>
                </value>
                <value>
                    <fullName>Other role</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_location__c</fullName>
        <label>Assessment location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>75 Westminster Bridge Road, London SE1 7HS</fullName>
                </value>
                <value>
                    <fullName>Atria, 75 Spa Road, Bolton, BL1 4AG</fullName>
                </value>
                <value>
                    <fullName>The Custard Factory, Gibb Square, Birmingham, B9 4AA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_options_Birmingham__c</fullName>
        <label>Assessment options Birmingham</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st August 2011</fullName>
                </value>
                <value>
                    <fullName>9th August 2011</fullName>
                </value>
                <value>
                    <fullName>17th August 2011</fullName>
                </value>
                <value>
                    <fullName>24th August 2011</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_options_Bolton__c</fullName>
        <label>Assessment options Bolton</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>28th July 2011</fullName>
                </value>
                <value>
                    <fullName>10th August 2011</fullName>
                </value>
                <value>
                    <fullName>22nd August 2011</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_options_London__c</fullName>
        <label>Assessment options London</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>27th July 2011</fullName>
                </value>
                <value>
                    <fullName>9th August 2011</fullName>
                </value>
                <value>
                    <fullName>16th August 2011</fullName>
                </value>
                <value>
                    <fullName>23rd August 2011</fullName>
                </value>
                <value>
                    <fullName>30th August 2011</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_total__c</fullName>
        <inlineHelpText>total scored in selection activity, sum of above</inlineHelpText>
        <label>Assessment total</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Role_3__c</fullName>
        <label>Assigned Role 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Team Leader</fullName>
                </value>
                <value>
                    <fullName>Deputy Team Leader</fullName>
                </value>
                <value>
                    <fullName>Senior Mentor</fullName>
                </value>
                <value>
                    <fullName>Residential Mentor</fullName>
                </value>
                <value>
                    <fullName>Community Mentor</fullName>
                </value>
                <value>
                    <fullName>Team Mentor</fullName>
                </value>
                <value>
                    <fullName>Project Volunteer</fullName>
                </value>
                <value>
                    <fullName>Ongoing RC Intern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Wave_3__c</fullName>
        <label>Assigned Wave 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1) 27 June</fullName>
                </value>
                <value>
                    <fullName>2) 4 July</fullName>
                </value>
                <value>
                    <fullName>3) 11 July</fullName>
                </value>
                <value>
                    <fullName>4) 18 July</fullName>
                </value>
                <value>
                    <fullName>5) 25 July</fullName>
                </value>
                <value>
                    <fullName>6) 1 August</fullName>
                </value>
                <value>
                    <fullName>7) 8 August</fullName>
                </value>
                <value>
                    <fullName>8) 15 August</fullName>
                </value>
                <value>
                    <fullName>9) 9 July</fullName>
                </value>
                <value>
                    <fullName>10) 6 August</fullName>
                </value>
                <value>
                    <fullName>Saturdays</fullName>
                </value>
                <value>
                    <fullName>Sundays</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_location_1__c</fullName>
        <label>Assigned location 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Hammersmith</fullName>
                </value>
                <value>
                    <fullName>Southwark</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_location_2__c</fullName>
        <label>Assigned location 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>Hammersmith</fullName>
                </value>
                <value>
                    <fullName>Southwark</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_location_3__c</fullName>
        <label>Assigned location 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Southwark</fullName>
                </value>
                <value>
                    <fullName>Hammersmith</fullName>
                </value>
                <value>
                    <fullName>Birmingham</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_role_1__c</fullName>
        <label>Assigned role 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Team Leader</fullName>
                </value>
                <value>
                    <fullName>Deputy Team Leader</fullName>
                </value>
                <value>
                    <fullName>Senior Mentor</fullName>
                </value>
                <value>
                    <fullName>Team Mentor</fullName>
                </value>
                <value>
                    <fullName>Associate Mentor</fullName>
                </value>
                <value>
                    <fullName>Residential Mentor</fullName>
                </value>
                <value>
                    <fullName>Community Mentor</fullName>
                </value>
                <value>
                    <fullName>Project Volunteer</fullName>
                </value>
                <value>
                    <fullName>Ongoing RC Intern</fullName>
                </value>
                <value>
                    <fullName>Logs Officer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_role_2__c</fullName>
        <label>Assigned role 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Team Leader</fullName>
                </value>
                <value>
                    <fullName>Deputy Team Leader</fullName>
                </value>
                <value>
                    <fullName>Senior Mentor</fullName>
                </value>
                <value>
                    <fullName>Team Mentor</fullName>
                </value>
                <value>
                    <fullName>Associate Mentor</fullName>
                </value>
                <value>
                    <fullName>Residential Mentor</fullName>
                </value>
                <value>
                    <fullName>Community Mentor</fullName>
                </value>
                <value>
                    <fullName>Project Volunteer</fullName>
                </value>
                <value>
                    <fullName>Ongoing RC Intern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_team_1__c</fullName>
        <label>Assigned team 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design &amp; Tech</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_team_2__c</fullName>
        <label>Assigned team 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Design &amp; Tech</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_team_3__c</fullName>
        <label>Assigned team 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design &amp; Tech</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>